--- a/Classes/SwitcherViewController.xib
+++ b/Classes/SwitcherViewController.xib
@@ -5,10 +5,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3682.6"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SideViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SwitcherViewController">
             <connections>
-                <outlet property="creditsButton" destination="108" id="167"/>
-                <outlet property="view" destination="1" id="3"/>
+                <outlet property="creditsButton" destination="108" id="J9F-D5-TuN"/>
+                <outlet property="switcher" destination="jA9-Pn-dHw" id="daq-a9-2Fj"/>
+                <outlet property="view" destination="1" id="vmE-aG-ntS"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -32,14 +33,14 @@
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
-                        <action selector="credits:" destination="-1" eventType="touchUpInside" id="168"/>
+                        <action selector="credits:" destination="-1" eventType="touchUpInside" id="MpL-Kq-SYp"/>
                     </connections>
                 </button>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" image="nds4ios.png" id="135">
-                    <rect key="frame" x="109" y="232" width="103" height="103"/>
+                    <rect key="frame" x="109" y="190" width="103" height="103"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="jA9-Pn-dHw">
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" id="jA9-Pn-dHw">
                     <rect key="frame" x="13" y="78" width="268" height="29"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <segments>
@@ -48,6 +49,9 @@
                         <segment title="Browse"/>
                         <segment title="Settings"/>
                     </segments>
+                    <connections>
+                        <action selector="switcher:" destination="-1" eventType="valueChanged" id="8XB-yN-dwi"/>
+                    </connections>
                 </segmentedControl>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nds4iOS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="NXM-W9-YG1">
                     <rect key="frame" x="25" y="8" width="270" height="34"/>
@@ -56,6 +60,23 @@
                     <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" id="TtH-vB-1dJ">
+                    <rect key="frame" x="40" y="312" width="240" height="209"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <string key="text">Created and managed by:
+rock88
+angelXwind
+inb4ohnoes
+maczydeco
+W.MS
+rileytestut
+
+Uses:
+MBPullDownController</string>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                </textView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
@@ -73,4 +94,15 @@
         <image name="SwitcherBackground.png" width="70.674842834472656" height="125.44785308837891"/>
         <image name="nds4ios.png" width="82.409156799316406" height="82.409156799316406"/>
     </resources>
+    <classes>
+        <class className="SwitcherViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SwitcherViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="credits:"/>
+                <relationship kind="action" name="switcher:"/>
+                <relationship kind="outlet" name="creditsButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="switcher" candidateClass="UISegmentedControl"/>
+            </relationships>
+        </class>
+    </classes>
 </document>
